--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,5 @@
 framework:
+    translator: ~
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     #http_method_override: true
@@ -6,7 +7,7 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: null
+        handler_id: ~
         cookie_secure: auto
         cookie_samesite: lax
 
@@ -14,3 +15,24 @@ framework:
     #fragments: true
     php_errors:
         log: true
+
+fos_user:
+#        registration:
+#            confirmation:
+#                enabled: true
+        db_driver: orm
+        firewall_name: main
+        user_class: App\Entity\User
+        from_email:
+           address: amacor521@gmail.com
+           sender_name: Test
+        service:
+            mailer: 'fos_user.mailer.noop'
+
+#fos_user:
+#    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+#    firewall_name: main
+#    user_class: App\Entity\User
+#    from_email:
+#        address: "amacor521@gmail.com"
+#        sender_name: "Test"
